--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,8 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
+    //activity result new format
+    api 'androidx.activity:activity-ktx:1.2.0-alpha07'
+    api 'androidx.fragment:fragment-ktx:1.3.0-alpha07'
+
 }
