--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VotingApp">
         <activity android:name=".VoterDashboard"></activity>
-        <activity android:name=".AdminDashboard" />
+        <activity android:name=".AdminDashboard">
+
+        </activity>
         <activity android:name=".ConfrimvoteFingerPrint"/>
 
         <activity android:name=".RegisterActivity" />
